less/rvway.less
@import "variables2.less";
@import "styles.less";

// Hero section
.rvway {
  background-color: #E2FAFF;
  padding: 5rem 0;
  #rvway-title {
    max-width: 70%;
    margin: 0 auto;
    padding-top: 4rem;
    h1 {
      font-family: @font-heading;
      font-size: 1.5rem;
      line-height: 2rem;
      font-weight: 700;
      text-align: center;
      transition: all 0.5s ease;
    }
  }
  #rvway-img {
    display: flex;
    justify-content: center;
    img {
      height: 150px;
      transition: all 0.5s ease;
    }
  }
  //Media query 300px - hero section
  @media (min-width: 300px) {
    #rvway-title {
      h1 {
        width: 95%;
        font-size: 1.6rem;
        line-height: 2.2rem;
        padding-bottom: 2rem;
        transition: all 0.5s ease;
      }
    }
    #rvway-img {
      img {
        height: 240px;
        transition: all 0.5s ease;
      }
    }
  }
  //Media query 600px - hero section
  @media (min-width: 600px) {
    padding-bottom: 10rem;
    #rvway-title {
      h1 {
        margin: 0 auto;
        font-size: 2rem;
        line-height: 2.75rem;
        text-align: center;
        transition: all 0.5s ease;
      }
    }
    #rvway-img {  
      img {
        height: 320px;
        transition: all 0.5s ease;
      }
    }
  }
  // Media query 900px - hero section
  @media (min-width: 900px) {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: auto !important;
    padding-bottom: 0;
    #rvway-title {
      display: flex;
      align-items: center;
      max-width: 30%;
      margin: 5rem 0;
      h1 {
        font-size: 2.25rem;
        line-height: 3.25rem;
        text-align: left;
        margin: 0 2rem;
        transition: all 0.5s ease;
      }
    }
    #rvway-img {
      margin-top: 5rem;
      height: 400px;
      img {
        height: 400px;
        transition: all 0.5s ease;
      }
    }
  }
}

// Main - case study content
main {
  //Section styling
  .p-container {
    width: 90%;
    margin: 0 auto;
    padding-bottom: 2rem;
    .section-title {
      h2 {
        font-size: 1.6rem;
        color: #1FB1D1;
        padding-bottom: 1rem;
        line-height: 2rem;
      }
    }
    .section-content {
      h4 {
        font-size: 1.1rem;
        font-weight: 600;
      }
    }
    // Media query - section 600px
    @media (min-width: 600px) {
      width: 80%;
      .section-title {
        h2 {
          font-size: 1.8rem;
        }
      }
    }
    // Media query - section 900px
    @media (min-width: 900px) {
      width: 75%;
    }
    // Media query - section 1000px
    @media (min-width: 1000px) {
      width: 60%;
      max-width: 65%;
    }
    //General image styling under figure class
    .figure {
      img {
          width: 900px;
          padding-bottom: 2rem;
      }
    }
    //Project background
    .three-column {
      padding-top: 1rem;
      text-align: center;

      // Media query 600px - three column
      @media (min-width: 600px) {
        display: flex;
        justify-content: space-around;
        .three-column {
          .column {
            padding: 0 2rem;
            p {
              padding: 0.5rem 0;
            }
          }
        }
      }
    }
    //Painpoints and wants
    .painpoints,
    .wants {
      padding-bottom: 2rem;
      h3 {
        font-size: 1.2rem;
        font-weight: 600;
        text-align: center;
      }
      ul {
        display: flex;
        flex-wrap: wrap;
        flex: 1 1 160px;
        li {
          flex-shrink: 0;
          font-size: 1rem;
          padding: 0 1rem;
          margin: 4px;
          border-radius: 1.2rem;
        }
      }
    }
    .painpoints {
      li {
        background-color: #f8e9dd;
      }
    }

    .wants {
      li {
        background-color: #D4F0F6;
      }
    }
    //Highlight
    .highlight {
      width: 80%;
      border-left: 6px solid #1FB1D1;
      padding-left: 2rem;
      margin: 1rem 0rem 2rem 2rem;
      p {
        font-family: @font-heading;
        font-size: 1.5rem;
        font-weight: 500;
        font-style: italic;
        color: #868996;
        line-height: 2.25rem;
      }
      .yes-no {
        display: flex;
        width: 100%;
        .yes,  .no {
          display: flex;
          flex-direction: column;
          align-items: center;
          padding: 1rem 2rem;
          border-radius: .5rem;
          margin-right: 2rem;
          h3 {
            font-size: 1.4rem;
          }
          p {
            color: @text-body;
            font-size: 1.5rem;
            font-weight: 600;
            font-style: normal;
            line-height: 0;
            padding-top: 1rem;
          }
        }
        .yes {
          background-color: #D4F0F6;
        }
        .no {
          background-color: #f8e9dd;
        }
      }
    }
  }
  //The Big RV picture illustration
  .card-container {
    width: 80%;
    margin: 0 auto;
    padding-bottom: 2rem;
    .card {
      display: flex;
      flex-direction: column;
      width: 260px;
      align-items: center;
      justify-content: center;
      padding: 1rem;
      margin: 1rem 0;
      background-color: #EBFCFF;
      .card-title {
        width: 85%;
        font-weight: 600;
        border-bottom: 1px solid #D3E8EC;
      }
      .card-text {
        width: 80%;
        padding-top: 1rem;
        p {
          padding: 0;
        }
      }
    }
    //Media query 600px - cards
    @media (min-width: 600px) {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: center;
      margin-bottom: 2rem;
      .card {
        min-height: 180px;
        margin-right: 1rem;
      }
    }
  }
}

.connect {
  background-color: #333642 !important;
  p, h1 {
    color: rgba(235, 238, 244, 0.8) !important;
  }
}

